tests/integration/snapshots/main__integration__subcommand__unknown_nested_subcommand_error.snap
---
source: tests/integration/subcommand.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: unexpected argument: unknown
   ╭─[ <cli>:1:4 ]
   │
 1 │ ci unknown
   │    ───┬───  
   │       ╰───── unexpected argument: unknown
───╯
